[package]
name = "p2p_udp_puncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
postcard = "1.0"
serde = { version = "1.0", features = ["derive"] }